--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
 </head>
 
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="color-change">Sovan Maitra's</span> Bhubon</h1>
-    <img src="images/jhankar2.png" alt="programming hero teacher">
-
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+        <h1><span class="color-change">Sovan Maitra's</span> Bhubon</h1>
+        <h3 class="h3-color">graphic designer | seo expert | web development(continue)</h3>
+        <p>Are you strugling for a website, you know seo friendly web development is very importent to grow your website. i can do graphic design, web development and search engine optimization(SEO) to grow your website also your business. I provide solid pro service, support, advice to build up your site. After delivery you also get support to solve your problems that is very importent to keep friendship.  </p><br>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">HIRE ME</a>
+        </div>
+        <div class="half-width pad-top">
+            <img src="images/jhankar2.png" alt="programming hero teacher">
+        </div>
+    
+    </section>
 </body>
 
 </html>
