--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
         </div>
     
     </section>
+    <section>
+        <div>
+            <img class="sec-img" src="images/computer table.jpg" alt="table">
+        </div>
+        <div class="sectwo">
+        
+        <h1 id="coffee">coffee with</h1>
+        <h1 id="gph">Graphic</h1>
+            <h2>Professional | Unique | Design</h2>
+            <h3><span>Sovan Maitra's</span>
+                design  </h3>
+            <p>
+                more than 5 years experience of design helps more to create eye catchy design. sometimes it looks like simple but unique sometimes it looks like gurgious. Logo design, printing or digital design like flyer, bruceour, I always try to do my best to create a new one.  
+            </p>
+            <a class="buttontwo" href="www.linkdin/sovanmaitra" target="_blank">HIRE ME</a>
+
+        </div>
+    </section>
 </body>
+
 
 </html>
