--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
 
         </div>
     </section>
+    <h1 id="exp-head">experience</h1>
+    <Section class="exp-area">
+        <div class="experience-area">
+            <div id="baby-dev">
+                <h2>Baby Web Developer</h2>
+                <h3 class="color-change">2022 to present | Baby web Developer</h3><hr>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+            <div id="seo-ser">
+                <h2>Solid SEO Service</h2>
+                <h3 class="color-change">2021 to present | SEO Solutions</h3><hr>
+                <p>Search engine optimization (SEO) is the process of improving the quality and quantity of website traffic to a website or a web page from search engines.</p>
+            </div>
+        </div>
+    </Section>
+    <footer>
+        <p class="footer">© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 
